--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "Content Management Toolbox",
   "main": "./server/server.js",
   "scripts": {
-    "dev": "node server/server.js",
+    "dev": "nodemon server/server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server/server.js"
+    "start": "NODE_ENV=production nodemon server/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^2.0.0",
-    "axios": "0.18.0",
+    "apollo-server-express": "2.0.0",
+    "axios": "0.19.2",
     "bcryptjs": "2.4.3",
     "body-parser": "1.18.3",
     "classnames": "2.2.6",
@@ -22,22 +22,23 @@
     "express": "4.16.3",
     "express-rate-limit": "3.2.1",
     "graphql": "0.13.2",
-    "helmet": "^3.15.0",
-    "lodash": "4.17.10",
+    "helmet": "3.21.2",
+    "lodash": "4.17.15",
     "moment": "2.22.2",
-    "mongoose": "5.2.5",
-    "next": "6.1.1",
+    "mongoose": "5.8.11",
+    "next": "9.2.1",
     "next-redux-wrapper": "2.0.0",
+    "nodemon": "1.18.9",
     "passport": "0.4.0",
-    "passport-google-oauth20": "1.0.0",
+    "passport-google-oauth20": "2.0.0",
     "passport-local": "1.0.0",
-    "react": "16.4.2",
-    "react-dom": "16.4.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
     "react-moment": "0.7.9",
     "react-redux": "5.0.7",
     "redux": "4.0.0",
     "redux-thunk": "2.3.0",
     "uuid": "3.3.2",
-    "validator": "^10.9.0"
+    "validator": "10.9.0"
   }
 }
