--- a/now.json
+++ b/now.json
@@ -1,12 +1,14 @@
 {
-  "env": {
-    "mongoURI": "@webdash-mongouri",
-    "secretOrKey1": "@webdash-secretorkey1",
-    "secretOrKey2": "@webdash-secretorkey2",
-    "googleClientID": "@webdash-googleclientid",
-    "googleClientSecret": "@webdash-googleclientsecret",
-    "cloudinaryCloudName": "@webdash-cloudinarycloudname",
-    "cloudinaryApiKey": "@webdash-cloudinaryapikey",
-    "cloudinaryApiSecret": "@webdash-cloudinaryapisecret"
+  "build": {
+    "env": {
+      "mongoURI": "@webdash-mongouri",
+      "secretOrKey1": "@webdash-secretorkey1",
+      "secretOrKey2": "@webdash-secretorkey2",
+      "googleClientID": "@webdash-googleclientid",
+      "googleClientSecret": "@webdash-googleclientsecret",
+      "cloudinaryCloudName": "@webdash-cloudinarycloudname",
+      "cloudinaryApiKey": "@webdash-cloudinaryapikey",
+      "cloudinaryApiSecret": "@webdash-cloudinaryapisecret"
+    }
   }
 }
