--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./server/server.js",
   "scripts": {
     "dev": "nodemon server/server.js",
-    "build": "next build",
+    "build": "next build && npm run start",
     "start": "NODE_ENV=production nodemon server/server.js"
   },
   "author": "",
