--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "2.0.0",
+    "apollo-server-express": "^2.10.0",
     "axios": "0.19.2",
     "bcryptjs": "2.4.3",
     "body-parser": "1.18.3",
