--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^2.10.0",
+    "apollo-server-express": "2.10.0",
     "axios": "0.19.2",
     "bcryptjs": "2.4.3",
     "body-parser": "1.18.3",
@@ -28,7 +28,7 @@
     "moment": "2.22.2",
     "mongoose": "5.8.11",
     "next": "9.2.1",
-    "next-redux-wrapper": "2.0.0",
+    "next-redux-wrapper": "4.0.1",
     "nodemon": "1.18.9",
     "passport": "0.4.0",
     "passport-google-oauth20": "2.0.0",
